# archway-playground

./: Cargo.toml  config.json
deposits/: Cargo.toml  NOTICE  config.json
deposits/src/: deposits.rs  deposits_test.rs  error.rs  lib.rs  msg.rs  state.rs
integration/: Cargo.toml  config.json
integration-tests/: Cargo.toml
integration-tests/src/: lib.rs
integration-tests/src/contracts/: deposits_contract.rs  token_contract.rs
integration-tests/src/multitest/: deposits_integration_test.rs
integration/examples/: schema.rs
integration/src/: contracts.rs  lib.rs  multitest.rs
token/: Cargo.toml  config.json
token/src/: allowances.rs  enumerable.rs  lib.rs
