[package]
name = "integration"
version = "0.1.0"
authors = ["AntonAndell <Anton@Andell.eu>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
library = []
tests = ["library", "cw-multi-test"]

[dependencies]
cosmwasm-schema = "1.1.1"
cosmwasm-std = "1.1.2"
cw-multi-test = { version = "0.15.0", optional = true }
cw-storage-plus = "0.15.0"
cw2 = "0.15.0"
cw20 = "0.12"
schemars = "0.8.10"
serde = { version = "1.0.144", features = ["derive"] }
thiserror = "1.0.35"

deposits = { path = "../deposits" }
token = { path = "../token" }



[dev-dependencies]
cw-multi-test = "0.15.0"