[package]
name = "integration"
version = "0.1.0"
authors = ["AntonAndell <Anton@Andell.eu>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
library = []
tests = ["library", "cw-multi-test"]

[dependencies]
cosmwasm-schema.workspace = true
cosmwasm-std.workspace = true
cw-storage-plus.workspace = true
cw0.workspace = true
cw2.workspace = true
cw20.workspace = true
schemars.workspace = true
thiserror.workspace = true
serde.workspace = true

cw-multi-test = { version = "0.15.0", optional = true }
deposits.workspace = true
token.workspace = true

[dev-dependencies]
cw-multi-test = "0.15.0"